2014-02-13: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* test commit

2013-12-10: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* RandomPlaylistFeed.m
	* GNUmakefile.preamble
	* GNUmakefile
	* Documentation/Install
	  bump version to 1.5.1
	  add built fix for systems that don't have arc4random in libc

2013-12-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* CollectionBrowser.m
	  get rid of -windowDidResize: method to fix weirdo resizing issues
	  get rid of DoubleClick action thingies
	  remove extraneous )
	* MPDConInfo.plist, GNUMakefile, MPDCon.pcproj
	  update version to 1.5
	* PlaylistController.m
	  make the removal of selected songs from playlist work

2013-11-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* CollectionBrowser.m
	* remove some NSLog entries
2013-11-23: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m
	* CollectionBrowser.m
	* CollectionController.m
	* MPDController.m
	* restructuring about notifications sent on collection updates
	* Resources/CollectionBrowser.gorm
	* re-add missing connection from NSOwner to -browser
	* CollectionBrowser.m
	* make the update and add buttons work as expected
	* CollectionController.m
	* AppController.m
	* MPDController.m
	* remove some NSLog
	* CollectionBrowser.m
	* reload browser columns when collection change notification
	  are received
	* Documentation/Install
	  mention the need for libbsd(-dev) on Linux

2013-11-22: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Resources/CollectionBrowser.gorm
	* add an update and add button

2013-11-14: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* AppController.m
	* CollectionBrowser.m
	* CollectionController.m
	* LyricsInspector.m
	* PlayView.m
	* PlaylistController.m
	* PlaylistInspector.m
	* PlaylistItem.m
	* PlaylistsManagerController.m
	* RandomPlaylistFeed.m
	* SQLiteAdaptor.m
	* SongInspector.m
	* fix a couple of format strings, potential memory leaks,